mlops_week13/docker_ingress_and_service_v3/classifier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: classifer-deployment
    labels:
        app: classifier
spec:
    replicas: 2
    selector:
        matchLabels:
            app: classifier
    template:
        metadata:
            labels:
                app: classifier
        spec:
            containers:
                - name: classifier
                  image: classifier-k8s:latest
                  imagePullPolicy: Never ## To make its not pulled from docker hub.
                  ports:
                      - containerPort: 7860
