mlops_week13/docker_ingress_and_service_v3/classifier-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: classifier-service
spec:
    selector:
        app: classifier
    ports:
        - protocol: TCP
          port: 80
          targetPort: 7860
